# sicsim-rs

./: .gitignore  Cargo.toml  README.md  ltorg.sic  n.copy.ebj  n.test_harness.ebj  org.ebj  test.sic  test_harness.sic
libsic/: Cargo.toml
libsic/programs/: copy_io_channel.sic  noop_io_interrupt.sic  test_inter.ebj
libsic/programs/sic/: add.ebj
libsic/programs/xe/: out_of_range.ebj  prog_int.ebj  relo.ebj  test_harness.ebj  test_inter.ebj  work_areas.ebj
libsic/src/: device.rs  word.rs
libsic/src/sic/: load.rs  mod.rs  vm.rs
libsic/src/xe/: debugger.rs  io_channel.rs  load.rs  mod.rs  op.rs  status_word.rs  vm.rs
libsic/tests/: xe.rs
programs/: call_svc.sic  copy.sic  equ.sic  longbyte.sic  out_of_range.sic  test.ebj  test_inter.sic  use.sic  word_label.sic
programs/sic/: test_harness.ebj
programs/xe/: call_svc.ebj  copy.ebj  copy_xe.ebj
sicasm/: Cargo.toml  example.asm  n.example.asm  n.test.ebj  relo.ebj
sicasm/programs/: interrupt.sic  iterator.sic  org.sic  prog_int.sic  relocatable.sic  test_inter.sic
sicasm/src/: constants.rs  directive.rs  labels.rs  lib.rs  main.rs  pass_one.rs  pass_two.rs
sicasm/tests/: snapshots.rs
sicasm2/: Cargo.toml
sicasm2/migrations/2023-07-08-184814_initial/: down.sql  up.sql
sicasm2/src/: data.rs  lib.rs  models.rs  parser.rs  pass_one.rs  pass_two.rs  record.rs  schema.rs
sicdbg/: Cargo.toml
sicdbg/src/: lib.rs
sickos/: rebuild_all.sh
sickos/src/: main.rs
siclsp/: Cargo.toml  README.md
siclsp/src/: main.rs
sicsim/: Cargo.toml  copy_io_channel.ebj  copy_io_channel.sdb  longbyte.ebj  ltorg-s.ebj  ltorg.ebj  noop_io_interrupt.ebj  noop_io_interrupt.sdb  test.ebj  test.sdb
sicsim/src/: main.rs  memory.rs  registers.rs  symbols.rs
src/: constants.rs  device.rs  directive.rs  labels.rs  lib.rs  line.rs  load.rs  main.rs  op.rs  pass_one.rs  pass_two.rs  record.rs  sic.rs  vm.rs  word.rs
src/asm/: program_int.sic
src/sic/: op.rs  vm.rs
src/xe/: load.rs  op.rs  vm.rs
tests/: programs.rs  sic.rs  snapshots.rs  xe.rs
tests/snapshots/: snapshots__copy_xe.snap  snapshots__longbyte.snap  snapshots__ltorg.snap  snapshots__org.snap  snapshots__relocate.snap
(+14 files in other folders)
