[package]
name = "libsic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
sicdbg = { version = "0.1.0", path = "../sicdbg" }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
thiserror = "1.0.30"
