[package]
name = "siclsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
once_cell = "1.18.0"
rangemap = "1.4.0"
sicasm2 = { version = "0.1.0", path = "../sicasm2" }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
trace = "0.1.7"
