[package]
name = "sicsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
itertools = "0.11.0"
libsic = { path = "../libsic" }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
